feat: Remove deleted indexes from object storage after a grace period
